# oh-my-skills

./: .gitignore  AGENTS.md  README-en.md  README.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-06-21T08-24-43-634Z.yml  page-2026-06-21T09-05-38-721Z.yml
docs/releases/: v0.1.1.md
src/: App.tsx  agentIconRegistry.ts  i18n.ts  main.tsx  styles.css  types.ts  uiTypes.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.hmr.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fs_ops.rs  lib.rs  main.rs  models.rs  registry.rs  scanner.rs  settings.rs  sync_plan.rs
src/components/: AgentDiscoveryEmptyState.tsx  EmptyStateVisuals.tsx  SettingsSheet.tsx  TabButton.tsx  shared.tsx
src/lib/: demoData.ts  skillUtils.ts
src/styles/: base.css  empty-states.css  responsive.css  settings.css  skills.css  sync.css
src/views/: SkillsView.tsx  SyncView.tsx
