[package]
name = "oh-my-skills"
version = "0.1.1"
description = "Desktop workbench for local Agent Skills"
authors = ["Oh My Skills"]
edition = "2021"
rust-version = "1.77.2"
repository = "https://github.com/nextcaicai/oh-my-skills"
homepage = "https://github.com/nextcaicai/oh-my-skills"
license = "MIT"

[lib]
name = "oh_my_skills_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
